kubernetes/EKS/alb-ingress/files/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "ingress-demo"
  namespace: "ingress-demo"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:441973536412:certificate/7f1532ed-72d2-4f8e-9041-ea96d9621de5
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ingress-demo
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /frontend*
            backend:
              serviceName: "service-frontend"
              servicePort: 80
          - path: /backend*
            backend:
              serviceName: "service-frontend"
              servicePort: 80
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
